--- a/README
+++ b/README
@@ -1,42 +1,37 @@
 *************************************
-*Metagoofil  2.0                    *
+*Metagoofil  2.2                    *
 *Coded by Christian Martorella      *
 *www.edge-security.com              *
 *cmartorella@edge-security.com      *
 *************************************
 
+THIS IS A PRE RELEASE VERSION FOR BLACKHAT ARSENAL MORE FEATURES AND IMPROVEMENTS ARE COMING SOON!
+
 What is this?
 -------------
 
-Metagoofil is a tool for extracting metadata of public documents (pdf,doc,xls,ppt,etc) availables in the target websites.This information could be useful because you can get valid usernames, or people names, for using later in bruteforce password attacks (vpn, ftp, webapps), the tool will also extracts interesting "paths" of the documents, where we can get shared resources names, server names, etc.
+Metagoofil is a tool for extracting metadata of public documents (pdf,doc,xls,ppt,etc) availables in the target websites.This information could be useful because you can get valid usernames, people names, for using later in bruteforce password attacks (vpn, ftp, webapps), the tool will also extracts interesting "paths" of the documents, where we can get shared resources names, server names, etc.
 
-
-All this information should not be available on the net, but most of the companies doesn't have policies about information leaking... and most of them don't know this information exists.
+This new version will also extract emails addresses from PDF and Word documents content.
 
 How it works?
 ------------
 
-The tool first queries google for different filetypes that can have useful metadata (pdf, doc, xls,ppt,etc),
-then it download those documents to the disk and extracts the metadata of the file.
+The tool first perform a query in Google requesting different filetypes that can have useful metadata (pdf, doc, xls,ppt,etc), then will download those documents to the disk and extracts the metadata of the file using specific libraries for parsing different file types (Hachoir, Pdfminer, etc)
 
 
 Dependencies:
 ------------
+In this version all depencies are included.
 
-In this version all depencies are includedi (Hachoir Metadata and PdfMiner), if you are running Metagoofil in a Linux environment, you 
-can take advantages from the "extract" program, so you need to install it in order to work.
-
-Debian:
-In debian is easy as: apt-get install libextractor
-
-OS X:
-Using Darwin ports, "port install libextractor"
-
-Windows: http://gnunet.org/libextractor/download/win/libextractor-0.5.14.zip
-
-Make sure 'extract' binary is on your path, if not you can modify extcommand variable inside program to suite your needs.
 
 
 Shouts goes to: Javi, Vicente, and all Metagoofil users :)
+Thanks Pdfminer, Hachoir for their great libraries. 
 
-Special thanks to Hachoir, PdfMiner and Markup projects
+Changelog 2.2:
+--------------
+-Fixed Google parser
+-Fixed email regexp
+-Fixed leading space in results
+-Fixed local analysis
